--- a/www/sur2.html
+++ b/www/sur2.html
@@ -285,7 +285,7 @@
                                 </tr>
                                 <tr>
                                     <th>(f)</th>
-                                    <td>People in your family didn't worry about whether you had adequate food or clothings or medical care</td>
+                                    <td>People in your family didn't worry about whether you had adequate food or clothing or medical care</td>
                                     <td id="e26">
                                         <input name="e1Op6" id="e1Op26" value="1" type="radio">
                                     </td>
@@ -699,19 +699,19 @@
                         <p id="erf2" class="errmsg"><b>Please enter a valid number.</b></p>
                     </div>
                     <div id="f1Blkc" class="sur2">
-                        <p><b>During the past 12 months (52 weeks), how many times...</b><br>did you come to an emergency room for help with emotional or behavioral problems (<ins>not</ins> including today)?</p>
+                        <p><b>During the past 12 months (52 weeks), how many times...</b><br>did you come to an emergency room for help with emotional or behavioral problems (<ins>not</ins> including this visit)?</p>
                         <input type="text" id="f1ctxt" value="" readonly="readonly" placeholder="Total times" />
                         <a id="fsb3" onclick="f1c()" class="ui-btn ui-corner-all">Next</a>
                         <p id="erf3" class="errmsg"><b>Please enter a valid number.</b></p>
                     </div>
                     <div id="f1Blkd" class="sur2">
-                        <p><b>During the past 12 months (52 weeks), how many times...</b><br>were you admitted for an overnight stay at a hospital for the treatment of emotional or behavioral problems (indicate the number of <ins>separate times</ins> this happened, <ins>not</ins> including today)?</p>
+                        <p><b>During the past 12 months (52 weeks), how many times...</b><br>were you admitted for an overnight stay at a hospital for the treatment of emotional or behavioral problems (indicate the number of <ins>separate times</ins> this happened, <ins>not</ins> including this visit)?</p>
                         <input type="text" id="f1dtxt" value="" readonly="readonly" placeholder="Total times" />
                         <a id="fsb4" onclick="f1d()" class="ui-btn ui-corner-all">Next</a>
                         <p id="erf4" class="errmsg"><b>Please enter a valid number.</b></p>
                     </div>
                     <div id="f1Blke" class="sur1">
-                        <p><b>During the past 12 months, how many <ins>total nights</ins> did you stay in a hospital for the treatment of emotional or behavioral problems?</b></p>
+                        <p><b>During the past 12 months, how many <ins>total nights</ins> did you stay in a hospital for the treatment of emotional or behavioral problems (<ins>not</ins> including this visit)?</b></p>
                         <input type="text" id="f1etxt" value="" readonly="readonly" placeholder="Total nights" />
                         <a id="fsb5" onclick="f1e()" class="ui-btn ui-corner-all">Next</a>
                         <p id="erf5" class="errmsg"><b>Please enter a valid number.</b></p>
