--- a/www/iat.html
+++ b/www/iat.html
@@ -13,87 +13,77 @@
                     <div id="iBlk1" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 1 of 7</ins></p>
                         <ul id="inBlk" style="list-style-type:none">
-                            <li>This is a practice block.</li>
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:gold">Death</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:gold">Life</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn2" onclick="stIAT(12, 1)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk3" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 2 of 7</ins></p>
                         <ul id="inBlk2" style="list-style-type:none">
-                            <li>This is a practice block.</li>
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:green">Not Me</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:green">Me</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:green">NOT ME</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:green">ME</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn4" onclick="stIAT(12, 2)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk4" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 3 of 7</ins></p>
                         <ul id="inBlk3" style="list-style-type:none">
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:gold">Death</span> and <span style="color:green">Not Me</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:gold">Life</span> and <span style="color:green">Me</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> and <span style="color:green">NOT ME</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> and <span style="color:green">ME</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn5" onclick="stIAT(24, 3)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk5" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 4 of 7</ins></p>
                         <ul id="inBlk4" style="list-style-type:none">
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:gold">Death</span> and <span style="color:green">Not Me</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:gold">Life</span> and <span style="color:green">Me</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> and <span style="color:green">NOT ME</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> and <span style="color:green">ME</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn6" onclick="stIAT(24, 4)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk6" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 5 of 7</ins></p>
                         <ul id="inBlk5" style="list-style-type:none">
-                            <li>Watch out, the labels have changed position!</li>
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:gold">Life</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:gold">Death</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn7" onclick="stIAT(24, 5)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk7" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 6 of 7</ins></p>
                         <ul id="inBlk6" style="list-style-type:none">
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:gold">Life</span> and <span style="color:green">Not Me</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:gold">Death</span> and <span style="color:green">Me</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and <span style="color:green">NOT ME</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and <span style="color:green">ME</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn8" onclick="stIAT(24, 6)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk8" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 7 of 7</ins></p>
                         <ul id="inBlk7" style="list-style-type:none">
-                            <li>Touchable areas are <span style="color:red">Red</span> on the left and <span style="color:blue">Blue</span> on the right.</li>
-                            <li>The <span style="color:red">red</span> area is used for <span style="color:gold">Life</span> and <span style="color:green">Not Me</span> words.</li>
-                            <li>The <span style="color:blue">blue</span> area is used for <span style="color:gold">Death</span> and <span style="color:green">Me</span> words.</li>
-                            <li>Tap the <span style="color:red">red</span> or <span style="color:blue">blue</span> areas to sort the word in the correct category.</li>
+                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and <span style="color:green">NOT ME</span> related words.</li>
+                            <li>Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and <span style="color:green">ME</span> related words.</li>
+                            <li></li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible!</li>
                         </ul>
                         <a id="iBtn9" onclick="stIAT(24, 7)" class="ui-btn ui-corner-all">Start</a>
                     </div>
