--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div id="iatDiv" class="welBlk">
                         <div id="iat1">
-                            <p>In this task, words will appear in the center of the screen one at a time, and your task is to sort them to the left or right side of the screen based on the categories listed at the top of the screen.  This will take about 5 minutes.  Please GO AS FAST AS YOU CAN while making as few mistakes as possible.<br>If you make a mistake, a red X will appear - please then tap the other side of the screen.</p>
+                            <p>In this task, words will appear in the center of the screen one at a time, and your task is to sort them to the left or right side of the screen based on the categories listed at the top of the screen.  This will take about 5 minutes.  Please GO AS FAST AS YOU CAN while making as few mistakes as possible.<br><br>If you make a mistake, a red X will appear - please then tap the other side of the screen.</p>
                         </div>
                         <div class="iatTable">
                         <table data-role="table" id="iatT" class="ui-responsive table-stroke">
