--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,11 @@
             </div>
             <div data-role="page" id="finish" data-theme="a">
                 <div data-role="content">
+                    <div id="fn1" class="fin1">
+                        <p><b>Thank you!  You have completed this portion of the study.</b></p>
+                        <p><b>Please give the tablet back to the researcher.</b></p>
+                        <p><b>Thank you for your time and help with this research.</b></p>
+                    </div>
                     <a id="iBtn3" onclick="reset()" href="#home" data-transition="slide" class="ui-btn ui-corner-all">Continue</a>
                     <p id="svOk"><span style="color:green">Data saved successfully!</span></p>
                     <p id="svErr"><span style="color:red">Error!  Data saved locally!</span></p>
