--- a/www/sur1.html
+++ b/www/sur1.html
@@ -95,13 +95,13 @@
                             <input name="a6Op1" id="a6Op1" value="1" type="radio">
                             <label id="a6lb1" for="a6Op1" class="chkbox">Married</label>
                             <input name="a6Op1" id="a6Op2" value="2" type="radio">
-                            <label id="a6lb2" for="a6Op2" class="chkbox">Divorced</label>
+                            <label id="a6lb2" for="a6Op2" class="chkbox">Separated</label>
                             <input name="a6Op1" id="a6Op3" value="3" type="radio">
-                            <label id="a6lb3" for="a6Op3" class="chkbox">Separated</label>
+                            <label id="a6lb3" for="a6Op3" class="chkbox">Divorced</label>
                             <input name="a6Op1" id="a6Op4" value="4" type="radio">
                             <label id="a6lb4" for="a6Op4" class="chkbox">Widowed</label>
                             <input name="a6Op1" id="a6Op5" value="5" type="radio">
-                            <label id="a6lb5" for="a6Op5" class="chkbox">Never Married</label>
+                            <label id="a6lb5" for="a6Op5" class="chkbox">Never married</label>
                         </fieldset>
                         <a id="asb6" onclick="a6()" class="ui-btn ui-corner-all">Next</a>
                         <p id="err6" class="errmsg"><b>Please choose an answer.</b></p>
@@ -195,7 +195,7 @@
                         <fieldset id="a10fd" data-role="controlgroup">
                             <input name="a10Op1" id="a10Op1" value="1" type="radio">
                             <label id="a10lb1" for="a10Op1" class="chkbox">$0 - 20,000</label>
-                            <input name="a9aOp1" id="a10Op2" value="2" type="radio">
+                            <input name="a10Op1" id="a10Op2" value="2" type="radio">
                             <label id="a10lb2" for="a10Op2" class="chkbox">$21,000 - $40,000</label>
                             <input name="a10Op1" id="a10Op3" value="3" type="radio">
                             <label id="a10lb3" for="a10Op3" class="chkbox">$41,000 - $60,000</label>
@@ -230,7 +230,7 @@
                             <tbody>
                                 <tr>
                                     <th>(a)</th>
-                                    <td>you were so <ins>sad or depressed</ins> that you couldn't concentrate, had trouble eating or sleeping, or didn't want to do things you normally enjoy</td>
+                                    <td>you were so <ins>sad or depressed</ins> that you couldn't concentrate, had trouble eating or sleeping, or didn't want to do things you usually enjoy</td>
                                     <td id="1">
                                         <input name="b1Op1" id="b1Op1" value="1" type="radio">
                                     </td>
@@ -380,7 +380,7 @@
                                 </tr>
                                 <tr>
                                     <th>(j)</th>
-                                    <td>you had unusual experiences like<ins>seeing or hearing things</ins> that other people couldn't see or hear (<i>Do <ins>not</ins> include times that you were half-asleep or drinking alcohol or taking drugs.</i>)</td>
+                                    <td>you had unusual experiences like <ins>seeing or hearing things</ins> that other people couldn't see or hear (<i>Do <ins>not</ins> include times that you were half-asleep or drinking alcohol or taking drugs.</i>)</td>
                                     <td id="37"><input name="b1Op10" id="b1Op37" value="1" type="radio">
                                     </td>
                                     <td id="38"><input name="b1Op10" id="b1Op38" value="2" type="radio">
@@ -583,7 +583,7 @@
                         <p id="erc9" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c3Blka" class="sur1">
-                        <p><b>About how old were you the very first time you made a plan to kill yourself?</b></p>
+                        <p><b>About how old were you the very first time you made a suicide attempt?</b></p>
                         <div class="ui-grid-a b2Size">
                             <div id="c3a" class="ui-block-a">
                                 <input type="text" id="c3atxt" value="" readonly="readonly" placeholder="Age" />
