--- a/www/sur2.html
+++ b/www/sur2.html
@@ -743,7 +743,7 @@
                         <a id="gsb1" onclick="g1()" class="ui-btn ui-corner-all">Next</a>
                     </div>
                     <div id="g2Blk" class="sur1">
-                        <p><b>What are the chances that you will make a suicide attempt in the <ins>next 1 month</ins></b></p>
+                        <p><b>What are the chances that you will make a suicide attempt in the <ins>next 1 month</ins>?</b></p>
                         <fieldset id="g2bfd" data-role="controlgroup">
                             <input name="g2bOp1" id="g2bOp1" value="1" type="radio">
                             <label id="g2blb1" for="g2bOp1" class="chkbox">0%</label>
@@ -772,7 +772,7 @@
                         <p id="erg2" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="g3Blk" class="sur1">
-                        <p><b>What are the chances that you will make a suicide attempt in the <ins>next 6 months</ins></b></p>
+                        <p><b>What are the chances that you will make a suicide attempt in the <ins>next 6 months</ins>?</b>></p>
                         <fieldset id="g3bfd" data-role="controlgroup">
                             <input name="g3bOp1" id="g3bOp1" value="1" type="radio">
                             <label id="g3blb1" for="g3bOp1" class="chkbox">0%</label>
