--- a/www/iat.html
+++ b/www/iat.html
@@ -13,7 +13,7 @@
                     <div id="iBlk1" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 1 of 7</ins></p>
                         <ul id="inBlk" style="list-style-type:none">
-                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> related words.</li>
+                            <li id="i1">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
@@ -31,7 +31,7 @@
                     <div id="iBlk4" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 3 of 7</ins></p>
                         <ul id="inBlk3" style="list-style-type:none">
-                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">ME</span> related words.</li>
+                            <li id="i3">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">ME</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
@@ -40,7 +40,7 @@
                     <div id="iBlk5" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 4 of 7</ins></p>
                         <ul id="inBlk4" style="list-style-type:none">
-                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">ME</span> related words.</li>
+                            <li id="i4">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">ME</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
@@ -49,7 +49,7 @@
                     <div id="iBlk6" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 5 of 7</ins></p>
                         <ul id="inBlk5" style="list-style-type:none">
-                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> related words.</li>
+                            <li id="i5">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
@@ -58,7 +58,7 @@
                     <div id="iBlk7" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 6 of 7</ins></p>
                         <ul id="inBlk6" style="list-style-type:none">
-                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">ME</span> related words.</li>
+                            <li id="i6">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">ME</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
@@ -67,7 +67,7 @@
                     <div id="iBlk8" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 7 of 7</ins></p>
                         <ul id="inBlk7" style="list-style-type:none">
-                            <li>During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">ME</span> related words.</li>
+                            <li id="7">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">ME</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
