--- a/www/sur1.html
+++ b/www/sur1.html
@@ -26,7 +26,7 @@
                             <label id="a2lb5" for="a2Op5" class="chkbox">Transgender, Do not identify as Male or Female</label>
                         </fieldset>
                         <a id="asb2" onclick="a2()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="err2" class="errmsg"><b>Please choose a gender.</b></p>
+                        <p id="err2" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a3Blk" class="sur1">
                         <p><b>Are you Spanish/Hispanic/Latino?</b><br><span class="smallTitle"><i>(Check all that apply.)</i></span></p>
@@ -90,7 +90,7 @@
                         <p id="err5" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a6Blk" class="sur1">
-                        <p><b>Are you currently married, divorced, separated, widowed, or never married?</b></p>
+                        <p><b>Are you currently married, separated, divorced, widowed, or never married?</b></p>
                         <fieldset id="a6fd" data-role="controlgroup">
                             <input name="a6Op1" id="a6Op1" value="1" type="radio">
                             <label id="a6lb1" for="a6Op1" class="chkbox">Married</label>
@@ -221,8 +221,8 @@
                                 <tr>
                                     <th></th>
                                     <th style="width:55%"></th>
-                                    <th class="b1Th" style="width:10%">Past Week</th>
-                                    <th class="b1Th" style="width:10%">Past Year <span style="font-size:15px">(not past week)</span></th>
+                                    <th class="b1Th" style="width:10%">Past week</th>
+                                    <th class="b1Th" style="width:10%">Past wear <span style="font-size:15px">(not past week)</span></th>
                                     <th class="b1Th" style="width:10%">More than a year ago</th>
                                     <th class="b1Th" style="width:10%">Never</th>
                                 </tr>
@@ -292,8 +292,8 @@
                                 <tr>
                                     <th></th>
                                     <th style="width:55%"></th>
-                                    <th class="b1Th" style="width:10%">Past Week</th>
-                                    <th class="b1Th" style="width:10%">Past Year <span style="font-size:15px">(not past week)</span></th>
+                                    <th class="b1Th" style="width:10%">Past week</th>
+                                    <th class="b1Th" style="width:10%">Past year <span style="font-size:15px">(not past week)</span></th>
                                     <th class="b1Th" style="width:10%">More than a year ago</th>
                                     <th class="b1Th" style="width:10%">Never</th>
                                 </tr>
@@ -347,8 +347,8 @@
                                 <tr>
                                     <th></th>
                                     <th style="width:55%"></th>
-                                    <th class="b1Th" style="width:10%">Past Week</th>
-                                    <th class="b1Th" style="width:10%">Past Year <span style="font-size:15px">(not past week)</span></th>
+                                    <th class="b1Th" style="width:10%">Past week</th>
+                                    <th class="b1Th" style="width:10%">Past year <span style="font-size:15px">(not past week)</span></th>
                                     <th class="b1Th" style="width:10%">More than a year ago</th>
                                     <th class="b1Th" style="width:10%">Never</th>
                                 </tr>
@@ -402,8 +402,8 @@
                                 <tr>
                                     <th></th>
                                     <th style="width:55%"></th>
-                                    <th class="b1Th" style="width:10%">Past Week</th>
-                                    <th class="b1Th" style="width:10%">Past Year <span style="font-size:15px">(not past week)</span></th>
+                                    <th class="b1Th" style="width:10%">Past week</th>
+                                    <th class="b1Th" style="width:10%">Past year <span style="font-size:15px">(not past week)</span></th>
                                     <th class="b1Th" style="width:10%">More than a year ago</th>
                                     <th class="b1Th" style="width:10%">Never</th>
                                 </tr>
@@ -424,7 +424,7 @@
                             </tbody>
                         </table>
                         <a id="bsb4" onclick="b1()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="erb4" class="errmsg"><b>Please provide an answer.</b></p>
+                        <p id="erb4" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="b2Blk" class="sur1">
                         <p id='b2q'></p>
