--- a/www/sur2.html
+++ b/www/sur2.html
@@ -6,7 +6,7 @@
                         <a id="dsb" onclick="dSt()" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="d1Blk" class="sur2">
-                        <p><b>Did either of your biological parents ever...</b><p>
+                        <p><b>Did <ins>either</ins> of your biological parents ever...</b><p>
                         <table data-role="table" id="dTbl1" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
@@ -323,7 +323,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a id="esb2" onclick="e1()" class="ui-btn ui-corner-all">Continue</a>
+                        <a id="esb2" onclick="e1()" class="ui-btn ui-corner-all">Next</a>
                         <p id="ere2" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="e2Blk" class="sur1">
@@ -405,7 +405,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a id="esb4" onclick="e2()" class="ui-btn ui-corner-all">Continue</a>
+                        <a id="esb4" onclick="e2()" class="ui-btn ui-corner-all">Next</a>
                         <p id="ere4" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="e3Blk" class="sur1">
@@ -678,7 +678,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a id="esb7" onclick="e3()" class="ui-btn ui-corner-all">Continue</a>
+                        <a id="esb7" onclick="e3()" class="ui-btn ui-corner-all">Next</a>
                         <p id="ere7" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="fBlk" class="sur1">
@@ -690,31 +690,32 @@
                         <p><b>During the past 12 months (52 weeks), how many times...</b><br>did you have a talk therapy session with a psychologist, psychiatrist, or other counselor for emotional or behavioral problems?</p>
                         <input type="text" id="f1atxt" value="" readonly="readonly" placeholder="Total times" />
                         <a id="fsb1" onclick="f1a()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="erf1" class="errmsg"><b>Please enter a valid number.</b></p>
+                        <p id="erf1" class="errmsg"><b>Please enter an answer.</b></p>
                     </div>
                     <div id="f1Blkb" class="sur2">
                         <p><b>During the past 12 months (52 weeks), how many times...</b><br>did you fill a prescription for antidepressant medication (that is, how many times did you go to the pharmacy to pick up this medication)?</p>
                         <input type="text" id="f1btxt" value="" readonly="readonly" placeholder="Total times" />
                         <a id="fsb2" onclick="f1b()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="erf2" class="errmsg"><b>Please enter a valid number.</b></p>
+                        <p id="erf2" class="errmsg"><b>Please enter an answer.</b></p>
                     </div>
                     <div id="f1Blkc" class="sur2">
                         <p><b>During the past 12 months (52 weeks), how many times...</b><br>did you come to an emergency room for help with emotional or behavioral problems (<ins>not</ins> including this visit)?</p>
                         <input type="text" id="f1ctxt" value="" readonly="readonly" placeholder="Total times" />
                         <a id="fsb3" onclick="f1c()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="erf3" class="errmsg"><b>Please enter a valid number.</b></p>
+                        <p id="erf3" class="errmsg"><b>Please enter an answer.</b></p>
                     </div>
                     <div id="f1Blkd" class="sur2">
                         <p><b>During the past 12 months (52 weeks), how many times...</b><br>were you admitted for an overnight stay at a hospital for the treatment of emotional or behavioral problems (indicate the number of <ins>separate times</ins> this happened, <ins>not</ins> including this visit)?</p>
                         <input type="text" id="f1dtxt" value="" readonly="readonly" placeholder="Total times" />
                         <a id="fsb4" onclick="f1d()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="erf4" class="errmsg"><b>Please enter a valid number.</b></p>
+                        <p id="erf4" class="errmsg"><b>Please enter an answer.</b></p>
                     </div>
                     <div id="f1Blke" class="sur1">
                         <p><b>During the past 12 months, how many <ins>total nights</ins> did you stay in a hospital for the treatment of emotional or behavioral problems (<ins>not</ins> including this visit)?</b></p>
                         <input type="text" id="f1etxt" value="" readonly="readonly" placeholder="Total nights" />
                         <a id="fsb5" onclick="f1e()" class="ui-btn ui-corner-all">Next</a>
-                        <p id="erf5" class="errmsg"><b>Please enter a valid number.</b></p>
+                        <p id="erf5" class="errmsg"><b>Please enter an answer.</b></p>
+                        <p id="erf6" class="errmsg"><b>Please enter a valid number 1 or greater.</b></p>
                     </div>
                     <div id="g1Blk" class="sur1">
                         <p><b>To what extent do you think of <ins>death</ins> as being "like you" versus "not like you"?</b></p>
@@ -772,7 +773,7 @@
                         <p id="erg2" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="g3Blk" class="sur1">
-                        <p><b>What are the chances that you will make a suicide attempt in the <ins>next 6 months</ins>?</b>></p>
+                        <p><b>What are the chances that you will make a suicide attempt in the <ins>next 6 months</ins>?</b></p>
                         <fieldset id="g3bfd" data-role="controlgroup">
                             <input name="g3bOp1" id="g3bOp1" value="1" type="radio">
                             <label id="g3blb1" for="g3bOp1" class="chkbox">0%</label>
