--- a/www/sur1.html
+++ b/www/sur1.html
@@ -25,7 +25,7 @@
                             <input name="a2Op1" id="a2Op5" value="5" type="radio">
                             <label id="a2lb5" for="a2Op5" class="chkbox">Transgender, Do not identify as Male or Female</label>
                         </fieldset>
-                        <a id="asb2" onclick="a2()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="asb2" onclick="a2()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err2" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a3Blk" class="sur1">
@@ -86,7 +86,7 @@
                             <input name="a5Op1" id="a5Op7" value="7" type="radio">
                             <label id="a5lb7" for="a5Op7" class="chkbox">Graduate or professional study</label>
                         </fieldset>
-                        <a id="asb5" onclick="a5()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="asb5" onclick="a5()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err5" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a6Blk" class="sur1">
@@ -103,7 +103,7 @@
                             <input name="a6Op1" id="a6Op5" value="5" type="radio">
                             <label id="a6lb5" for="a6Op5" class="chkbox">Never married</label>
                         </fieldset>
-                        <a id="asb6" onclick="a6()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="asb6" onclick="a6()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err6" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a7Blk" class="sur1">
@@ -118,7 +118,7 @@
                             <input name="a7Op1" id="a7Op4" value="4" type="radio">
                             <label id="a7lb4" for="a7Op4" class="chkbox">Not sure</label>
                         </fieldset>
-                        <a id="asb7" onclick="a7()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="asb7" onclick="a7()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err7" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a8Blk" class="sur1">
@@ -187,7 +187,7 @@
                             <input name="a9aOp1" id="a9aOp4" value="4" type="radio">
                             <label id="a9alb4" for="a9aOp4" class="chkbox">More than 5 years</label>
                         </fieldset>
-                        <a id="asb9a" onclick="a9a()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="asb9a" onclick="a9a()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err9a" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="a10Blk" class="sur1">
@@ -206,7 +206,7 @@
                             <input name="a10Op1" id="a10Op6" value="6" type="radio">
                             <label id="a10lb6" for="a10Op6" class="chkbox">> $100,000</label>
                         </fieldset>
-                        <a id="asb10" onclick="a10()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="asb10" onclick="a10()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err10" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="bBlk" class="sur1">
@@ -467,7 +467,7 @@
                             <input name="c1Op1" id="c1Op2" value="2" type="radio">
                             <label id="c1lb2" for="c1Op2" class="chkbox">No</label>
                         </fieldset>
-                        <a id="csb1" onclick="c1()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb1" onclick="c1()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc1" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c1Blka" class="sur1">
@@ -512,7 +512,7 @@
                             <input name="c1cOp1" id="c1cOp5" value="5" type="radio">
                             <label id="c1clb5" for="c1cOp5" class="chkbox">7-12 months ago</label>
                         </fieldset>
-                        <a id="csb4" onclick="c1c()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb4" onclick="c1c()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc4" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c2Blk" class="sur1">
@@ -523,7 +523,7 @@
                             <input name="c2Op1" id="c2Op2" value="2" type="radio">
                             <label id="c2lb2" for="c2Op2" class="chkbox">No</label>
                         </fieldset>
-                        <a id="csb5" onclick="c2()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb5" onclick="c2()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc5" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c2Blka" class="sur1">
@@ -568,7 +568,7 @@
                             <input name="c2cOp1" id="c2cOp5" value="5" type="radio">
                             <label id="c2clb5" for="c2cOp5" class="chkbox">7-12 months ago</label>
                         </fieldset>
-                        <a id="csb8" onclick="c2c()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb8" onclick="c2c()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc8" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c3Blk" class="sur1">
@@ -579,7 +579,7 @@
                             <input name="c3Op1" id="c3Op2" value="2" type="radio">
                             <label id="c3lb2" for="c3Op2" class="chkbox">No</label>
                         </fieldset>
-                        <a id="csb9" onclick="c3()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb9" onclick="c3()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc9" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c3Blka" class="sur1">
@@ -619,7 +619,7 @@
                             <input name="c3cOp1" id="c3cOp6" value="6" type="radio">
                             <label id="c3clb6" for="c3cOp6" class="chkbox">More than 1 year ago</label>
                         </fieldset>
-                        <a id="csb12" onclick="c3c()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb12" onclick="c3c()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc12" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c3Blkd" class="sur1">
@@ -659,7 +659,7 @@
                             <input name="c4Op1" id="c4Op2" value="2" type="radio">
                             <label id="c4lb2" for="c4Op2" class="chkbox">No</label>
                         </fieldset>
-                        <a id="csb14" onclick="c4()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb14" onclick="c4()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc14" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c4Blka" class="sur1">
@@ -696,7 +696,7 @@
                             <input name="c4bOp1" id="c4bOp8" value="8" type="radio">
                             <label id="c4blb8" for="c4bOp8" class="chkbox">101 or more times</label>
                         </fieldset>
-                        <a id="csb16" onclick="c4b()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb16" onclick="c4b()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc16" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c4Blkc" class="sur1">
@@ -715,7 +715,7 @@
                             <input name="c4cOp1" id="c4cOp6" value="6" type="radio">
                             <label id="c4clb6" for="c4cOp6" class="chkbox">More than 1 year ago</label>
                         </fieldset>
-                        <a id="csb17" onclick="c4c()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb17" onclick="c4c()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc17" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c5Blk" class="sur1">
@@ -726,7 +726,7 @@
                             <input name="c5Op1" id="c5Op2" value="2" type="radio">
                             <label id="c5lb2" for="c5Op2" class="chkbox">No</label>
                         </fieldset>
-                        <a id="csb18" onclick="c5()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb18" onclick="c5()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc18" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c5Blka" class="sur1">
@@ -771,7 +771,7 @@
                             <input name="c5cOp1" id="c5cOp5" value="5" type="radio">
                             <label id="c5clb5" for="c5cOp5" class="chkbox">7-12 months ago</label>
                         </fieldset>
-                        <a id="csb21" onclick="c5c()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="csb21" onclick="c5c()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc21" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                 </div>
