--- a/www/sur2.html
+++ b/www/sur2.html
@@ -769,7 +769,7 @@
                             <input name="g2bOp1" id="g2bOp11" value="11" type="radio">
                             <label id="g2blb11" for="g2bOp11" class="chkbox">100%</label>
                         </fieldset>
-                        <a id="gsb2" onclick="g2()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="gsb2" onclick="g2()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erg2" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="g3Blk" class="sur1">
@@ -798,7 +798,7 @@
                             <input name="g3bOp1" id="g3bOp11" value="11" type="radio">
                             <label id="g3blb11" for="g3bOp11" class="chkbox">100%</label>
                         </fieldset>
-                        <a id="gsb3" onclick="g3()" class="ui-btn ui-corner-all">Next</a>
+                        <a id="gsb3" onclick="g3()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erg3" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                 </div>
