--- a/www/sst.html
+++ b/www/sst.html
@@ -10,7 +10,7 @@
                             <li>If the word is written in <span style="color:red">red</span>, tap the RED side.</li>
                             <li>If the word is written in <span style="color:blue">blue</span>, tap the BLUE side.</li>
                             <li>A "+" will appear on the screen before each word appears to show you where to look.</li>
-                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible.</li>
+                            <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
                         <a id="sBtn2" onclick="stSST()" class="ui-btn ui-corner-all">Start</a>
                     </div>
