--- a/www/iat.html
+++ b/www/iat.html
@@ -67,7 +67,7 @@
                     <div id="iBlk8" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 7 of 7</ins></p>
                         <ul id="inBlk7" style="list-style-type:none">
-                            <li id="7">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">ME</span> related words.</li>
+                            <li id="i7">During this part of the task, tap the LEFT side of the screen for <span style="color:gold">LIFE</span> and for <span style="color:green">NOT ME</span> related words.  Tap the RIGHT side of the screen for <span style="color:gold">DEATH</span> and for <span style="color:green">ME</span> related words.</li>
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li>GO AS FAST AS YOU CAN while making as few mistakes as possible.</li>
                         </ul>
